[package]
name = "cute-borders"
version = "1.4.0"
edition = "2021"

[dependencies]
check_elevation = "0.2.4"
eframe = { version = "0.27.2", default-features = false, features = ["default_fonts", "glow"] }
lazy_static = "1.4.0"
once_cell = "1.19.0"
planif = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
tray-icon = "0.13.5"
winapi = { version = "0.3.9", features = ["winuser", "dwmapi", "shellapi", "winerror"] }
winreg = "0.52.0"

[build-dependencies]
winres = "0.1.12"

# Perfil de compilação para Release (quando você usa `cargo build --release`)
[profile.release]
opt-level = 'z'     # Otimizar para tamanho (melhor que 's')
lto = "fat"         # Ativa Link-Time Optimization para melhor otimização
codegen-units = 1   # Melhora o LTO, mas aumenta o tempo de compilação
panic = "abort"     # Remove a necessidade de "unwinding" em panics, economizando espaço
strip = true        # Remove símbolos de debug do binário final (muito importante!)